start map menu mode implementation

--- a/trafficcounter-frontend/src/assets/i18n/de.json
+++ b/trafficcounter-frontend/src/assets/i18n/de.json
@@ -2,5 +2,11 @@
   "language": {
     "en": "Deutsch",
     "de": "Englisch"
+  },
+  "map": {
+    "menu": {
+      "measurement-points": "Messpunkte",
+      "vehicle-amount": "Anzahl Fahrzeuge"
+    }
   }
 }
