--- a/trafficcounter-frontend/src/assets/i18n/en.json
+++ b/trafficcounter-frontend/src/assets/i18n/en.json
@@ -2,5 +2,11 @@
   "language": {
     "de": "German",
     "en": "English"
+  },
+  "map": {
+    "menu": {
+      "measurement-points": "Measurement points",
+      "vehicle-amount": "Amount of vehicles"
+    }
   }
 }
