add styling for map menu

--- a/trafficcounter-frontend/src/assets/i18n/de.json
+++ b/trafficcounter-frontend/src/assets/i18n/de.json
@@ -1,7 +1,7 @@
 {
   "language": {
-    "en": "Deutsch",
-    "de": "Englisch"
+    "en": "Englisch",
+    "de": "Deutsch"
   },
   "map": {
     "menu": {
