add components for speed display

--- a/trafficcounter-frontend/src/assets/i18n/de.json
+++ b/trafficcounter-frontend/src/assets/i18n/de.json
@@ -6,7 +6,8 @@
   "map": {
     "menu": {
       "measurement-points": "Messpunkte",
-      "vehicle-amount": "Anzahl Fahrzeuge"
+      "vehicle-amount": "Anzahl Fahrzeuge",
+      "vehicle-speed": "Geschwindigkeit der Fahrzeuge"
     }
   }
 }
