fix info card style

--- a/trafficcounter-frontend/src/assets/i18n/de.json
+++ b/trafficcounter-frontend/src/assets/i18n/de.json
@@ -9,6 +9,9 @@
       "vehicle-amount": "Anzahl Fahrzeuge",
       "vehicle-speed": "Geschwindigkeit der Fahrzeuge"
     },
+    "action": {
+      "clearSelectedPoint": "Auswahl zurücksetzen"
+    },
     "info-card": {
       "title": "Messdaten",
       "description": {
