--- a/trafficcounter-frontend/src/assets/i18n/en.json
+++ b/trafficcounter-frontend/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
         "average-speed": "Average speed",
         "number-of-vehicles": "Number of vehicles"
       },
+      "no-data": "No data",
       "speed-display-class": {
         "high": "High speed",
         "neutral": "Neutral speed",
