--- a/trafficcounter-frontend/src/assets/i18n/de.json
+++ b/trafficcounter-frontend/src/assets/i18n/de.json
@@ -15,6 +15,7 @@
         "id": "ID",
         "speed-rating": "Geschw. Bewertung",
         "average-speed": "Durchschn. Geschw.",
+        "estimated-speed-limit": "Geschätzte Geschw.-Begrenzung",
         "number-of-vehicles": "Anzahl Fahrzeuge"
       },
       "speed-display-class": {
