--- a/trafficcounter-frontend/src/assets/i18n/en.json
+++ b/trafficcounter-frontend/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
         "id": "ID",
         "speed-rating": "Speed rating",
         "average-speed": "Average speed",
+        "estimated-speed-limit": "Estimated speed limit",
         "number-of-vehicles": "Number of vehicles"
       },
       "speed-display-class": {
