split histograms into two separate diagrams

--- a/trafficcounter-frontend/src/assets/i18n/de.json
+++ b/trafficcounter-frontend/src/assets/i18n/de.json
@@ -28,7 +28,10 @@
       }
     },
     "histogram": {
-      "title": "Histogramm",
+      "title": {
+        "speedData": "Histogramm Geschw.",
+        "vehicleAmount": "Histogram Anzahl Fahrzeuge"
+      },
       "label": {
         "speedData": "Geschwindigkeitsdaten",
         "vehicleAmount": "Anzahl Fahrzeuge"
